--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "core-js": "^3.6.5",
+    "postcss": "^8.1.8",
     "tailwindcss": "^1.9.6",
     "vue": "^2.6.11",
     "vue-awesome": "^4.1.0",
