--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tailwindcss": "^1.9.6",
     "vue": "^2.6.11",
     "vue-awesome": "^4.1.0",
+    "vue-carousel": "^0.18.0",
     "vue-kinesis": "^1.1.7",
     "vue-router": "^3.2.0"
   },
