--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.11",
     "vue-awesome": "^4.1.0",
     "vue-carousel": "^0.18.0",
+    "vue-final-modal": "^0.21.5",
     "vue-kinesis": "^1.1.7",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0"
